Java 17 & mapping & obfuscation